@@ -2,6 +2,7 @@
         - Bugfix: Extension hiding works again with names >12 characters
         - Testing aid: card detect-to-LED function
         - GEOS support (d64/d71/d81 images only)
+        - File-based M-R emulation
 
 2010-06-21 - release 0.9.2
         - Bugfix: Rename was broken on FAT
